--- a/Front-End/style.css
+++ b/Front-End/style.css
@@ -5,14 +5,19 @@ body {
   }
   
   header {
+    position:sticky ;
+    width: 100%;
     background-color: #222;
     color: white;
-    padding: 20px;
+    padding: 20px 0PX;
+    top: 0;
     text-align: center;
+    z-index: 4;
   }
   
   nav {
     background-color: #444;
+    width: 100%;
     padding: 10px 20px;
     display: flex;
     justify-content: space-between;
@@ -25,9 +30,21 @@ body {
     margin: 0 10px;
     text-decoration: none;
   }
-  
+  nav div input{
+    width: 10rem;
+    height: 16px;
+    align-items: center;
+  }
+
+  nav div button{
+    height: 23px;
+    width: 2rem;
+    align-items: center;
+  }
+
   .nav_izquierda,
-  .nav_derecha {
+  .nav_derecha,
+  .nav_cent {
     display: flex;
     align-items: center;
   }
