--- a/Front-End/css/styleCarrito.css
+++ b/Front-End/css/styleCarrito.css
@@ -68,8 +68,7 @@
 }
 
 
-#vaciar-carrito-btn {
-  display: block;
+#vaciar-carrito-btn, .comprar-carrito-btn{
   margin: 25px 0 0 auto;
   background-color: #34495e;
   color: white;
@@ -80,10 +79,19 @@
   cursor: pointer;
   transition: background 0.3s ease;
 }
+.comprar-carrito-btn {
+  background-color:#c0392b;
+}
 
-#vaciar-carrito-btn:hover {
+contenedor-btn-carrito{
+  display: flex;
+  justify-content: space-between;
+}
+
+#vaciar-carrito-btn, .comprar-carrito-btn:hover {
   background-color: #2c3e50;
 }
+
 
 
 @media (max-width: 600px) {
