Carrito de compra + detalle conectado

--- a/inicio/templates/inicio.html
+++ b/inicio/templates/inicio.html
@@ -20,7 +20,7 @@
 
         <nav class="menu-principal" id="menuPrincipal">
             <div class="menu-links">
-                <a href="inicio.html">Inicio</a>
+                <a href="/">Inicio</a>
 
                 <div class="menu-con-submenu">
                     <a href="#" class="submenu-toggle">Productos ▾</a>
@@ -47,7 +47,7 @@
             </form>
 
             <div class="user-cart">
-                <a href="carrito.html" class="carrito" aria-label="Ver carrito">
+                <a href="/cart/" class="carrito" aria-label="Ver carrito">
                     🛒 <span id="contador-carrito" class="cart-count">0</span>
                 </a>
                 <div id="user-area">
