--- a/inicio/static/css/styleCarrito.css
+++ b/inicio/static/css/styleCarrito.css
@@ -83,7 +83,7 @@
   background-color:#c0392b;
 }
 
-contenedor-btn-carrito{
+.contenedor-btn-carrito {
   display: flex;
   justify-content: space-between;
 }
