--- a/inicio/templates/inicio.html
+++ b/inicio/templates/inicio.html
@@ -72,14 +72,14 @@
   </div>
 
   <script>
-  document.querySelectorAll('.card').forEach(card => {
-    card.addEventListener('click', () => {
-      const id = card.getAttribute('data-id');
-      window.location.href = '/detalle/' + id + '/';
+    document.querySelectorAll('.card').forEach(card => {
+      card.addEventListener('click', () => {
+        const id = card.getAttribute('data-id');
+        window.location.href = '/detalle/' + id + '/';
+      });
     });
-  });
-</script>
   </script>
+  <script src="{% static 'js/contadorCarrito.js' %}"></script>
   <script src="{% static 'js/navFuncion.js' %}"></script>
 </body>
 </html>
