--- a/inicio/templates/carrito.html
+++ b/inicio/templates/carrito.html
@@ -46,8 +46,7 @@
 
       <div class="user-cart">
         <a href="/cart/" class="carrito" aria-label="Ver carrito">
-          🛒
-          <span id="contador-carrito" class="cart-count">0</span>
+          🛒 <span id="contador-carrito" class="cart-count">0</span>
         </a>
         <div id="user-area">
           <a href="#" id="login-link">Iniciar Sesión</a>
