--- a/inicio/templates/inicio.html
+++ b/inicio/templates/inicio.html
@@ -79,7 +79,7 @@
       });
     });
   </script>
-  <script src="{% static 'js/contadorCarrito.js' %}"></script>
+  <script src="{% static 'js/carrito.js' %}"></script>
   <script src="{% static 'js/navFuncion.js' %}"></script>
 </body>
 </html>
