--- a/inicio/templates/inicio.html
+++ b/inicio/templates/inicio.html
@@ -48,7 +48,7 @@
           🛒 <span id="contador-carrito" class="cart-count">0</span>
         </a>
         <div id="user-area">
-          <a href="#" id="login-link">Iniciar Sesión</a>
+          <a href="/login/" id="login-link">Iniciar Sesión</a>
         </div>
         <div id="welcome-area" style="display:none;">
           <span id="welcome-msg"></span>
