--- a/inicio/templates/filtros.html
+++ b/inicio/templates/filtros.html
@@ -155,7 +155,7 @@
     });
     });
 </script>
-<!-- precio -->
+<!-- precio aaaaa-->
 <script>
       const sliderMax = document.getElementById('slider-max');
       const maxValue = document.getElementById('max-value');
